added html for img

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container w-full h-screen">
-        <div class="card">
-
-        </div>
+    <div class="main w-full h-screen bg-zinc-100 flex justify-center items-center">
+       <div class="center flex justify-center items-center relative w-full h-full">
+            <div class="img-container bg-yellow-400 w-10/12 h-5/6 absolute"></div>
+            <div class="img-container bg-yellow-400 w-10/12 h-5/6 absolute"></div>
+            <div class="img-container bg-yellow-400 w-10/12 h-5/6 absolute"></div>
+       </div>
     </div>
     
     <script src="script.js"></script>
