--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 <body>
     <div class="main w-full h-screen bg-zinc-100 flex justify-center items-center">
        <div class="center flex justify-center items-center relative w-full h-full">
-            <div class="img-container bg-yellow-400 w-10/12 h-5/6 absolute"></div>
-            <div class="img-container bg-yellow-400 w-10/12 h-5/6 absolute"></div>
-            <div class="img-container bg-yellow-400 w-10/12 h-5/6 absolute"></div>
+            <div class="img-container w-10/12 h-5/6 absolute overflow-hidden ">
+                <img id="img1" class="h-full  object-cover" src="https://images.unsplash.com/photo-1726565306060-a458582f7010?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHwxNnx8fGVufDB8fHx8fA%3D%3D" alt="">
+            </div>
+            <div class="img-container  w-10/12 h-5/6 absolute overflow-hidden">
+                <img id="img2" class="h-full  object-cover" src="https://plus.unsplash.com/premium_photo-1726841974919-b287bcf90acd?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw0Nnx8fGVufDB8fHx8fA%3D%3D" alt="">
+            </div>
+            <div class="img-container  w-10/12 h-5/6 absolute overflow-hidden">
+                <img id="img3" class="h-full  object-cover" src="https://plus.unsplash.com/premium_photo-1723507306975-36dfe1666df3?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxmZWF0dXJlZC1waG90b3MtZmVlZHw2N3x8fGVufDB8fHx8fA%3D%3D" alt="">
+            </div>
        </div>
     </div>
     
